Disabled javascript on smaller screen sizes, fixed mobile display issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
-html {
-
+html {  
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
-  overflow-y:hidden;
+  height: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .app {
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   transition: ease-out 0.5s;
 }
@@ -28,14 +31,19 @@ html {
 
 .bg{
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: 0;
+  overflow: hidden;
   transition: ease-out 0.5s;
 }
 
 .bg.test{
   background-image: url(assets/ciphercollector.png);
   border-radius: 100vh;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -63,6 +71,12 @@ html {
   justify-content: center;
   padding: 2px;
   font-size: x-large;
+}
+
+@media (max-width: 768px){
+  .js-only{
+    display: none;
+  }
 }
 
 @media (min-width:1440px) {
